Added contact form with basic form controller

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,1 +1,22 @@
 <h2>Page contact</h2>
+
+<div class="row-fluid">
+    <form action="#" ng-submit="formSubmit()">
+        <div class="form-group">
+            <label for="name">name:</label>
+            <input type="text" class="form-control" ng-model="formName">
+        </div>
+        <div class="form-group">
+            <label for="name">email:</label>
+            <input type="text" class="form-control" ng-model="formEmail">
+        </div>
+        <div class="form-group">
+            <label for="name">tel:</label>
+            <input type="text" class="form-control" ng-model="formTel">
+        </div>
+
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary">
+        </div>
+    </form>
+</div>
