--- a/templates/friends.html
+++ b/templates/friends.html
@@ -8,4 +8,22 @@
             <td>{{friend.phone}}</td>
           </tr>
         </table>
+
+        <hr>
+
+        <div class="row-fluid">
+          <div class="container-fluid">
+            <form>
+              <div class="form-group">
+                <label for="name">Friend name</label>
+                <input type="text" ng-model="newFriend.name" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="name">Friend phone</label>
+                <input type="text" ng-model="newFriend.phone" class="form-control">
+              </div>
+              <a href="" ng-click="addFriend()">Ajouter un ami</a>
+            </form>
+          </div>
+        </div>
       </div>
